# TaskMgrSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TaskMgrSystem.cpp  TaskMgrSystem.h  conanfile.txt  install.sh  main.cpp
libs/CommonCxx/: Consts.h  FileSystemRAII.h  FoldCallable.h  SqliteTables.h  StatusCode.cpp  StatusCode.h
libs/IPCClients/AccountServiceClient/: AccountServiceClient.cpp  AccountServiceClient.h
libs/Utils/CryptoHandler/: CryptoHandler.cpp  CryptoHandler.h
libs/Utils/ErrorHandling/: ErrorHandling.cpp  ErrorHandling.h
recipes/: AccountServiceIPC.proto  AccountStructs.proto  generate_grpc.sh
recipes/AccountServiceIPC/: AccountServiceIPC.grpc.pb.cc  AccountServiceIPC.grpc.pb.h  AccountServiceIPC.pb.cc  AccountServiceIPC.pb.h  AccountStructs.grpc.pb.cc  AccountStructs.grpc.pb.h  AccountStructs.pb.cc  AccountStructs.pb.h
services/AccountService/: AccountService.cpp  AccountService.h  CMakeLists.txt  main.cpp
services/AccountService/AccountAuthentication/: AccountAuthentication.cpp  AccountAuthentication.h
services/AccountService/AccountHandler/: AccountHandler.cpp  AccountHandler.h
services/AccountService/AccountMonitor/: AccountMonitor.cpp  AccountMonitor.h
services/IpcClient/: CMakeLists.txt  IpcClient.cpp  IpcClient.h  main.cpp
